r6xx/r7xx: fix ums cmd buffer leak

Fixes:
https://bugs.freedesktop.org/show_bug.cgi?id=27957